attempt to fix homepage footer overlap

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@
 
 .mainpage-container {
   display: inline-block;
-  min-height: 200px;
+  min-height: 600px;
   width: 100%;
   margin: auto;
 }
